# imagegen

./: README.md  filters.json  pyproject.toml
ImageMagick/: README.md  gen_all.bash  gen_script.bash  set_bg.bash
ImageMagick/scripts/: fractal_colour_contours-256.bash  fractal_colour_contours.bash  fractal_filaments.bash  fractal_plasma.bash  fractal_swirl.bash  hextile_lines.bash  noise_paint_areas.bash
gimp_scripts/: low_light_restore.scm  low_light_restore_workflow.md
imagegen_cli/: __init__.py  cli.py  filter_manifest.py  gui.py  history.py  job_runner.py  main.py
src/imagegen_cli/: __init__.py  cli.py
