[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "imagegen"
version = "0.1.0"
description = "Generate images from the command line for testing and experimentation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.7",
]

[project.scripts]
imagegen = "imagegen_cli.main:app"
