[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagegen-cli"
version = "0.1.0"
description = "Modern CLI for running ImageMagick image generation scripts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8.0.0",
]

[project.scripts]
imagegen = "imagegen_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
