[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "imagegen"
version = "0.1.0"
description = "Generate images from the command line for testing and experimentation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "click>=8.0.0",
  "pydantic>=2.7",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.7",
]

[project.scripts]
imagegen = "imagegen_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["imagegen_cli"]

[tool.hatch.build.targets.sdist]
include = [
  "/imagegen_cli",
  "/ImageMagick",
  "/filters.json",
  "/README.md",
]

[tool.uv]
package = true
